save commit before Request::readHeader

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-TODO: handle cgi local redirect
+TODO: handle cgi local redirect (needs cleaning)
 TODO: handle response timeout
 TODO: handle cgi request/response timeout
 TODO: handle cgi error pages properly
