--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
-TODO: handle cgi local redirect (needs cleaning)
-TODO: handle response timeout
-TODO: handle cgi request/response timeout
-TODO: handle cgi error pages properly
-TODO: handle exception properly (there are some unhandled exceptions)
-TODO: handle max body size
-
+TODO: handle cgi local redirect (needs cleaning) ........................... done
+TODO: handle response timeout ..............................................
+TODO: handle cgi request/response timeout ..................................
+TODO: handle cgi error pages properly ...................................... done
+TODO: handle exception properly (there are some unhandled exceptions) ......
+TODO: handle max body size ................................................. done
